--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20160109<br/>
       设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
-      Update 20160110:<br/>
+      Update 20160116:<br/>
       <ul>
-        <li>细微的改进。</li>
+        <li>玉人费了好大的功夫做了个<a href="http://weibo.com/5662509221/DdoP0upMG">商店钻石货购买攻略</a>，我实在是看不下去了，做了个<a href="guide.jpg">简易版</a>的。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
@@ -344,6 +344,7 @@
             <input type="radio" name="simple" value="-1" onClick="changeFilter()" /> 华丽
             <div class='weightContainer' style="display: none" id = "simpleWeightContainer">
             	&nbsp;&nbsp;权重 <input type="text" id="simpleWeight" name="simpleWeight" value="1" onChange="changeFilter()" />
+              <span class="boost" id="simpleBoost"></span>
           	</div>
           </div>
           <div class='control'>
@@ -352,6 +353,7 @@
             <input type="radio" name="cute" value="-1" onClick="changeFilter()" /> 成熟
             <div class='weightContainer' style="display: none" id = "cuteWeightContainer">
             	&nbsp;&nbsp;权重 <input type="text" id="cuteWeight" name="cuteWeight" value="1" onChange="changeFilter()" />
+              <span class="boost" id="cuteBoost"></span>
             </div>
           </div>
           <div class='control'>
@@ -360,6 +362,7 @@
             <input type="radio" name="active" value="-1" onClick="changeFilter()" /> 优雅
             <div class='weightContainer' style="display: none" id = "activeWeightContainer">
               &nbsp;&nbsp;权重 <input type="text" id="activeWeight" name="activeWeight" value="1" onChange="changeFilter()" />
+              <span class="boost" id="activeBoost"></span>
             </div>
           </div>
           <div class='control'>
@@ -368,6 +371,7 @@
             <input type="radio" name="pure" value="-1" onClick="changeFilter()" /> 性感
             <div class='weightContainer' style="display: none" id = "pureWeightContainer">
               &nbsp;&nbsp;权重 <input type="text" id="pureWeight" name="pureWeight" value="1" onChange="changeFilter()" />
+              <span class="boost" id="pureBoost"></span>
             </div>
           </div>
           <div class='control'>
@@ -376,6 +380,7 @@
             <input type="radio" name="cool" value="-1" onClick="changeFilter()" /> 保暖
             <div class='weightContainer' style="display: none" id = "coolWeightContainer">
               &nbsp;&nbsp;权重 <input type="text" id="coolWeight" name="coolWeight" value="1" onChange="changeFilter()" />
+              <span class="boost" id="coolBoost"></span>
             </div>
           </div>
           <div id='tagFilter'>
