--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
       <ul>
         <li>玉人费了好大的功夫做了个<a href="http://weibo.com/5662509221/DdoP0upMG">商店钻石货购买攻略</a>，我实在是看不下去了，做了个<a href="guide.jpg">简易版</a>的。</li>
         <li>为了配合冰雪舞会活动把极限权重做进来了，可以参考<a href="http://tieba.baidu.com/p/4306388792" target="_blank">这篇说明</a>来刷高分。建议有衣柜的选择"极限-我的衣柜"（不过我没测过=v=）。</li>
+        <li>冰雪舞会的权重已测。刷分注意，分数每5000一档，105000以上21个雪晶片，1000000以上20个，以此类推，发现和最高分在一个区间里就不用费力刷了，反正也多拿不了。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
