--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         <li>为了配合冰雪舞会活动把极限权重做进来了，可以参考<a href="http://tieba.baidu.com/p/4306388792" target="_blank">这篇说明</a>来刷高分。建议有衣柜的选择"极限-我的衣柜"。</li>
         <li>注意选完极限模式以后可以直接按照购物车里的衣服来穿。</li>
         <li>冰雪舞会的权重已测。刷分注意，分数每5000一档，105000以上21个雪晶片，100000以上20个，以此类推，发现和最高分在一个区间里就不用费力刷了，反正也多拿不了。</li>
-        <li>由于玉人还在契而不舍地刷分来超过我，至今也没有收到她收集的F列表，心塞。。。</li>
+        <li>更新了一部分F数据。</li>
         <li>(今天的通知好多)添加了极限模式之后配装器就更卡了，先忍忍。。。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
