--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type='text/javascript' charset="UTF-8" src='jquery.auto-complete.min.js'></script>
     <script type='text/javascript' charset="UTF-8" src='../nikkistats/wardrobe.js'></script>
     <script type='text/javascript' charset="UTF-8" src='../nikkistats/scoring.js'></script>
-    <script type='text/javascript' charset="UTF-8" src='blacklist.js'></script>
+    <script type='text/javascript' charset="UTF-8" src='../nikkistats/blacklist.js'></script>
     <script type='text/javascript' charset="UTF-8" src='levels.js'></script>
     <script type='text/javascript' charset="UTF-8" src='../nikkistats/model.js'></script>
     <script type='text/javascript' charset="UTF-8" src='../nikkistats/pattern.js'></script>
@@ -316,11 +316,12 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20160109<br/>
-      设计图数据来自amy_翡翠@贴吧 1.5.2<br/>
-      Update 20160119:<br/>
+      服装数据来自jillhx@贴吧 20160126<br/>
+      设计图数据来自amy_翡翠@贴吧 1.5.6<br/>
+      Update 20160127:<br/>
       <ul>
-        <li>我的一份检讨书，<a href="http://tieba.baidu.com/p/4310159038">链接</a></li>
+        <li>衣柜已更新到jillhx的20160126版</li>
+        <li>使用了兔子和猫猫的F品数据，仅供极限模式下参考，如果还有f品漏掉请去<a href="http://tieba.baidu.com/p/4223816101">这里</a>汇报</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
