--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
       <ul>
         <li>衣柜已更新到jillhx的20160126版</li>
         <li>使用了兔子和猫猫的F品数据，仅供极限模式下参考，如果还有f品漏掉请去<a href="http://tieba.baidu.com/p/4223816101">这里</a>汇报</li>
+        <li style="color:white">那些觉得玉人审美好的人，你们太高估她在用户体验方面的品味了，我忍辱负重卧薪尝胆替你们瞎了狗眼避免了一次反人类事件的发生我容易么我。摔！</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
