--- a/index.html
+++ b/index.html
@@ -317,10 +317,12 @@
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20160126<br/>
-      设计图数据来自amy_翡翠@贴吧 1.5.6<br/>
-      Update 20160201:<br/>
+      设计图数据来自amy_翡翠@贴吧<br/>
+      Update 20160202:<br/>
       <ul>
         <li>暖暖你们是有多缺钱，为了坑钻都在联盟关卡里放F品。你们直接抢不是更快？！</li>
+        <li>衣柜数据已经更新到jillhx的20160202版</li>
+        <li>联盟第三关已经更新，F品由于有很多，仍在收集中</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
