--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       设计图数据来自amy_翡翠@贴吧<br/>
       Update 20160204:<br/>
       <ul>
-        <li>梦幻大使二选一又来了，<a href="ivangift.github.io/nikkirec">灰科技</a>也已经更新了。请只上传游戏截图，不要调戏。</li>
+        <li>梦幻大使二选一又来了，<a href="http://ivangift.github.io/nikkirec">灰科技</a>也已经更新了。请只上传游戏截图，不要调戏。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
