--- a/index.html
+++ b/index.html
@@ -316,11 +316,12 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20160126<br/>
+      服装数据来自jillhx@贴吧 20160214<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160204:<br/>
+      Update 20160215:<br/>
       <ul>
-        <li>为了更好地对付梦幻大使，<a href="http://ivangift.github.io/nikkirec">灰科技</a>已经搬到亚洲服务器以加快连接速度。</li>
+        <li>衣柜数据已经更新到jillhx的20160214版，加入了情人节部件。</li>
+        <li>玉人虽然走了，生活还得继续，感谢她在各种黑白灰科技中提供的帮助，只是以后我怎么办。。。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
