--- a/index.html
+++ b/index.html
@@ -318,10 +318,9 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20160214<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160215:<br/>
+      Update 20160220:<br/>
       <ul>
-        <li>衣柜数据已经更新到jillhx的20160214版，加入了情人节部件。</li>
-        <li>玉人虽然走了，生活还得继续，感谢她在各种黑白灰科技中提供的帮助，只是以后我怎么办。。。</li>
+        <li>出游中，更新暂缓</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
