--- a/index.html
+++ b/index.html
@@ -316,11 +316,11 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20160214<br/>
+      服装数据来自amy_翡翠@贴吧 20160223<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160220:<br/>
+      Update 20160301:<br/>
       <ul>
-        <li>出游中，更新暂缓</li>
+        <li>好不容易才有空把新衣柜导入，结果一看，又有新活动了，心塞。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
