--- a/index.html
+++ b/index.html
@@ -318,16 +318,11 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160223<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160302:<br/>
+      Update 20160310:<br/>
       <ul>
         <li>ip和玉人的最后一篇论文：<a href="http://tieba.baidu.com/p/4384656129" target="_blank">http://tieba.baidu.com/p/4384656129</a></li>
-        <li>留给大家的各类遗产</li>
-          <ol>
-            <li><a href="#" target="_blank">配装器（就是这个）</a></li>
-            <li><a href="../nikkic/" target="_blank">设计图计算器</a></li>
-            <li><a href="../nikkirec/" target="_blank">梦幻大使灰科技</a></li>
-            <li><span style="color:red">(新)</span><a href="../nikkisim/" target="_blank">关卡技能模拟器</a>等我回头整合进来</li>
-          </ol>
+        <li>实不相瞒，这几天又要出游，无心恋战，又碰到公主材料不足做不了滑板鞋（划掉），所以只能临走之前先更新四关再说。剩下的关卡视我空闲时间以及摔伤情况决定何时更新，请祝我好运。</li>
+          
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
