--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       Update 20160310:<br/>
       <ul>
         <li>ip和玉人的最后一篇论文：<a href="http://tieba.baidu.com/p/4384656129" target="_blank">http://tieba.baidu.com/p/4384656129</a></li>
-        <li>实不相瞒，这几天又要出游，无心恋战，又碰到公主材料不足做不了滑板鞋（划掉），所以只能临走之前先更新四关再说。剩下的关卡视我空闲时间以及摔伤情况决定何时更新，请祝我好运。</li>
+        <li>滑板鞋（划掉）做出来了，顺利地卡在爱情废墟风上，听说明天出婚纱，我表示压力很大。幸亏明天没有围棋看不然我就彻底没工夫玩了。</li>
           
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
