--- a/index.html
+++ b/index.html
@@ -318,11 +318,11 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160223<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160310:<br/>
+      Update 20160311:<br/>
       <ul>
         <li>ip和玉人的最后一篇论文：<a href="http://tieba.baidu.com/p/4384656129" target="_blank">http://tieba.baidu.com/p/4384656129</a></li>
-        <li>滑板鞋（划掉）做出来了，顺利地卡在爱情废墟风上，听说明天出婚纱，我表示压力很大。幸亏明天没有围棋看不然我就彻底没工夫玩了。</li>
-          
+        <li>关卡更新完毕，注意婚纱和竞技场一样，不能用极限权重，不然后果自负（不过就算你用了标准权重后果也是自负的）</li>
+        <li>衣柜已更新</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
