--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <li>迫于玉人的压力不得不强忍着时差配合更新的ip表示她的攻略岂止是界面有品位问题啊！</li>
         <li>愚人节关卡已经更新，简单攻略如下：</li>
         <ol>
-          <li>用购物车搭配服装，不要穿鞋子免得对方有灰姑娘</li>
+          <li>用标准权重在购物车搭配服装，不要穿鞋子免得对方有灰姑娘</li>
           <li>第一关：80000分，第二关：90000分，第三关，75000分，第四关，85000分，第五关，70000分</li>
           <li>进游戏，不要用技能，躺着任其蹂躏</li>
           <li>假装被F吓到</li>
