--- a/index.html
+++ b/index.html
@@ -318,21 +318,11 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自amy_翡翠@贴吧 20160223<br/>
+      服装数据来自amy_翡翠@贴吧 20160404<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160402:<br/>
+      Update 20160404:<br/>
       <ul>
-        <li>迫于玉人的压力不得不强忍着时差配合更新的ip表示她的攻略岂止是界面有品位问题啊！</li>
-        <li>愚人节关卡已经更新，简单攻略如下：</li>
-        <ol>
-          <li>用标准权重在购物车搭配服装，不要穿鞋子免得对方有灰姑娘</li>
-          <li>第一关：80000分，第二关：90000分，第三关，75000分，第四关，85000分，第五关，70000分</li>
-          <li>进游戏，不要用技能，躺着任其蹂躏</li>
-          <li>假装被F吓到</li>
-        </ol>
-        <li>联盟关卡更新完毕，F品尚未添加，注意调整衣服。</li>
-        <li>已经整合了技能推荐功能。</li>
-        <li>已经修正了若干烦人的小bug。</li>
+        <li>衣柜更新了，设计图也更新了，连F品都更新了。张士超你到底把我家钥匙放在哪里了？</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
