--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160404<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160404:<br/>
+      Update 20160405:<br/>
       <ul>
-        <li>衣柜更新了，设计图也更新了，连F品都更新了。张士超你到底把我家钥匙放在哪里了？</li>
+        <li>玉人对我昨天临时更新导致她在首页中逗留的时间过短表示了强烈不满，女人真难伺候啊！</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
