--- a/index.html
+++ b/index.html
@@ -318,11 +318,12 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自amy_翡翠@贴吧 20160404<br/>
+      服装数据来自amy_翡翠@贴吧 20160415<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160405:<br/>
+      Update 20160417:<br/>
       <ul>
-        <li>玉人对我昨天临时更新导致她在首页中逗留的时间过短表示了强烈不满，女人真难伺候啊！</li>
+        <li>上周末更新衣柜的时候玉人警告我说如果更新完了记录里把她删了就要我好看，所以一直没敢在这里说，不过拉拉队已经更新了。</li>
+        <li>说起来，是不是又要开新章了，好麻烦。。。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
