--- a/index.html
+++ b/index.html
@@ -320,11 +320,11 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160421<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160423:<br/>
+      Update 20160424:<br/>
       <ul>
-        <li>抱着翡翠的大腿更新了衣柜，感谢她以及之前栩栩一直以来为大家的辛勤付出</li>
-        <li>但是我提前一个礼拜开始刷也没刷够第三关的过关材料，这掉率也太坑了吧</li>
-        <li>玉人你好好向上面提到的妹子们学习学习&lt;---这就算提到你了哈</li>
+        <li>昨天的更新记录因为众所周知的原因被迫删除了</li>
+        <li>好消息是我终于克服了第三关的问题，把权重更新了</li>
+        <li>F品还没有，自己看着办</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
