--- a/index.html
+++ b/index.html
@@ -318,13 +318,12 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自amy_翡翠@贴吧 20160421<br/>
+      服装数据来自amy_翡翠@贴吧 20160430<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160424:<br/>
+      Update 20160430:<br/>
       <ul>
-        <li>昨天的更新记录因为众所周知的原因被迫删除了</li>
-        <li>好消息是我终于克服了第三关的问题，把权重更新了</li>
-        <li>F品还没有，自己看着办</li>
+        <li>音乐会的衣柜已经更新，关卡已更新</li>
+        <li>据说出现了双手手持，等我明天研究一下看看怎么处理。。。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
