--- a/index.html
+++ b/index.html
@@ -320,12 +320,9 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160513<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160514:<br/>
+      Update 20160520:<br/>
       <ul>
-        <li>2.0.2的衣柜已经更新（了一部分）</li>
-        <li>在出游前的几分钟添加了荧光之灵的支持，万一有错请等我回来一起修</li>
-        <li>为了迎接20号的二选一，又一次丧权辱国地抱了玉人大腿求她收集服装数据，灰科技不日更新</li>
-        <li>为了避免不必要的麻烦，我删掉了双手饰品，反正这东西的分数比不上左右手双持</li>
+        <li><a href="/nikkirec">二选一灰科技</a>已经在玉人的帮助下更新了一大堆衣服，具体关卡要等开服了以及我们俩有空的时候再去鉴别，大家自己先摸索下</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
