--- a/index.html
+++ b/index.html
@@ -318,11 +318,11 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自amy_翡翠@贴吧 20160513<br/>
+      服装数据来自amy_翡翠@贴吧 20160526<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160520:<br/>
+      Update 20160530:<br/>
       <ul>
-        <li><a href="/nikkirec">二选一灰科技</a>已经在玉人的帮助下更新了一大堆衣服，具体关卡要等开服了以及我们俩有空的时候再去鉴别，大家自己先摸索下</li>
+        <li>近日严重沉迷stellaris和守望先锋中，总算抽空把上个礼拜的衣柜更新了。。。。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
