--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160526<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160530:<br/>
+      Update 20160610:<br/>
       <ul>
-        <li>近日严重沉迷stellaris和守望先锋中，总算抽空把上个礼拜的衣柜更新了。。。。</li>
+        <li>添加了新章节的联盟关卡，但是没有F品信息，小心使用。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
