--- a/index.html
+++ b/index.html
@@ -318,11 +318,13 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自amy_翡翠@贴吧 20160526<br/>
+      服装数据来自amy_翡翠@贴吧 20160617<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160613:<br/>
+      Update 20160617:<br/>
       <ul>
-        <li>更新了兔子的F品，联盟第五章已涵盖。</li>
+        <li>更新了衣柜</li>
+        <li>更新了黑蔷薇之舞的关卡</li>
+        <li>分数5000一档，玩的时候注意尽量瞄准高分，前期浪费的机会都会变成最后一天浪掉的钻</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
