update messages to users

--- a/index.html
+++ b/index.html
@@ -324,7 +324,20 @@
       <ul>
         <li>更新了衣柜</li>
         <li>更新了黑蔷薇之舞的关卡</li>
-        <li>分数5000一档，玩的时候注意尽量瞄准高分，前期浪费的机会都会变成最后一天浪掉的钻</li>
+        <li>尽量使用极限-顶配或者极限-我的衣柜，搭配无伤技能顺序刷。一旦遇到以下情况立即退出以免浪费次数：</li>
+        <ul>
+          <li>吃到了对方的挑剔</li>
+          <li>裁判顺序不对</li>
+          <li>加分技能没有释放到正确的属性上</li>
+        </ul>
+        <li>分数5000一档，玩的时候注意尽量瞄准高分，前期浪费的机会迟早会变成最后一天浪掉的钻，每关极限档位和ip个人的得分如下。ip是v0，荧光之灵不全，没有绷带也没有木偶，所以你们一定可以做得更好！</li>
+        <ol>
+          <li>105000分，21蔷薇，个人得分106665</li>
+          <li>100000分，20蔷薇，个人得分99080@.@</li>
+          <li>110000分，22蔷薇，个人得分108428</li>
+          <li>110000分，22蔷薇，个人得分105512</li>
+          <li>115000分，23蔷薇，个人得分110514</li>
+        </ol>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
