--- a/index.html
+++ b/index.html
@@ -320,24 +320,11 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160617<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160617:<br/>
+      Update 20160620:<br/>
       <ul>
-        <li>更新了衣柜</li>
-        <li>更新了黑蔷薇之舞的关卡</li>
-        <li>尽量使用极限-顶配或者极限-我的衣柜，搭配无伤技能顺序刷。一旦遇到以下情况立即退出以免浪费次数：</li>
-        <ul>
-          <li>吃到了对方的挑剔</li>
-          <li>裁判顺序不对</li>
-          <li>加分技能没有释放到正确的属性上</li>
-        </ul>
-        <li>分数5000一档，玩的时候注意尽量瞄准高分，前期浪费的机会迟早会变成最后一天浪掉的钻，每关极限档位和ip个人的得分如下。ip是v0，荧光之灵不全，没有绷带也没有木偶，所以你们一定可以做得更好！</li>
-        <ol>
-          <li>105000分，21蔷薇，个人得分106665</li>
-          <li>100000分，20蔷薇，个人得分99080@.@</li>
-          <li>110000分，22蔷薇，个人得分108428</li>
-          <li>110000分，22蔷薇，个人得分105512</li>
-          <li>115000分，23蔷薇，个人得分110514</li>
-        </ol>
+        <li>今天从傲娇攻略组那里听说了一些事情，我个人觉得，攻略作者不一定要有普渡众生的能力，但是要有普渡众生的心态，所以我不是很明白为什么大家做攻略还能吵起来。这种事情玉人也受害过好几次，我才会劝她早点抽身。</li>
+        <li>我本人除了玉人以外没有和其他人合作过（毕竟我也不太好意思剥削别人的劳动力，当然梦幻大使灰科技开发的时候借助了更多人的帮助，再次感谢）。
+          但是这不妨碍其它攻略作者使用或者改进我的发现和想法，我的成果都是开源的，并不需要我的授权。何况随着游戏的不断更新，ip迟早会失去所有的利用价值，以后还有啥事情就不用把我也带上了。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
