--- a/index.html
+++ b/index.html
@@ -320,12 +320,11 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160617<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160620:<br/>
+      Update 20160702:<br/>
       <ul>
-        <li>今天从傲娇攻略组那里听说了一些事情，我个人觉得，攻略作者不一定要有普渡众生的能力，但是要有普渡众生的心态，所以我不是很明白为什么大家做攻略还能吵起来。这种事情玉人也受害过好几次，我才会劝她早点抽身。</li>
-        <li>我本人除了玉人以外没有和其他人合作过（毕竟我也不太好意思剥削别人的劳动力，当然梦幻大使灰科技开发的时候借助了更多人的帮助，再次感谢）。
-          但是这不妨碍其它攻略作者使用或者改进我的发现和想法，我的成果都是开源的，并不需要我的授权。何况随着游戏的不断更新，ip迟早会失去所有的利用价值，以后还有啥事情就不用把我也带上了。</li>
-        <li>为了避免大家误会我再补充两句，大家应该看到了置顶的衣柜数据来源，最早是依靠栩栩，后来是依靠翡翠，没有她们的付出也没有我配装器的今天。傲娇她们有能力独立测试权重、估算分值、开发软件，这些我帮不上也没空帮忙，所以从理论上说，我只是抱了她们的大腿而已。我也不会帮她们说话，当年玉人躺枪得那么惨我也没说过啥。一个大老爷们哪有功夫折腾这些，正在前往66号公路。</li>
+        <li>更新了第14章的权重。</li>
+        <li>14-3必须要做衣服和鞋子，14-8必须要做衣服、鞋子和头发，其它注意看要求。</li>
+        <li>玉人认为她早上叫我起来对本次更新起到了重要作用。但是我依然得下班以后才能更新，更何况早上我也没醒啊！</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
