--- a/index.html
+++ b/index.html
@@ -320,11 +320,10 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160617<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160702:<br/>
+      Update 20160708:<br/>
       <ul>
-        <li>更新了第14章的权重。</li>
-        <li>14-3必须要做衣服和鞋子，14-8必须要做衣服、鞋子和头发，其它注意看要求。</li>
-        <li>玉人认为她早上叫我起来对本次更新起到了重要作用。但是我依然得下班以后才能更新，更何况早上我也没醒啊！</li>
+        <li>按照去年的调性，星宫领域的关卡和竞技场的一样，要早起测权重的可以注意下。搭配请注意不要使用极限权重免得翻船。</li>
+        <li>因为工作繁忙，又不出差，也不肯被某人叫起来，所以权重测试每天都会很晚才开始。除非他们今年的关卡和去年一样，那就省力了。。。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
