--- a/index.html
+++ b/index.html
@@ -320,10 +320,9 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160617<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160708:<br/>
+      Update 20160709:<br/>
       <ul>
-        <li>按照去年的调性，星宫领域的关卡和竞技场的一样，要早起测权重的可以注意下。搭配请注意不要使用极限权重免得翻船。</li>
-        <li>因为工作繁忙，又不出差，也不肯被某人叫起来，所以权重测试每天都会很晚才开始。除非他们今年的关卡和去年一样，那就省力了。。。</li>
+        <li>好像真的跟去年一样，那我干脆把剩下几天的一起放出来算了。</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
