--- a/index.html
+++ b/index.html
@@ -318,11 +318,12 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自amy_翡翠@贴吧 20160617<br/>
+      服装数据来自amy_翡翠@贴吧 20160708<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
       Update 20160709:<br/>
       <ul>
-        <li>好像真的跟去年一样，那我干脆把剩下几天的一起放出来算了。</li>
+        <li>话说，我忘了前几天的关卡叫啥名字了，所以就不更新名字了</li>
+        <li>前两天忘了说了，衣柜已经更新了</li>
       </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
