--- a/index.html
+++ b/index.html
@@ -320,11 +320,14 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160708<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160709:<br/>
+      Update 20160715:<br/>
       <ul>
-        <li>话说，我忘了前几天的关卡叫啥名字了，所以就不更新名字了</li>
-        <li>前两天忘了说了，衣柜已经更新了</li>
+        <li>满天繁星总算结束了，钻也被坑完了</li>
+        <li>居然和某人吃了顿饭，谁说她优雅S的。。。</li>
+        <li>但是她不同意</li>
+        <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;——ip对玉人有意见，但是玉人不同意</li>
       </ul>
+      <strong>Proof of our existence, and our memories  -- updated together by 玉人&ip on 15th July 2016</strong><span style="color:white">这是ip被打了一顿后发上去的</span><br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906" target="_blank">主贴</a>汇报<br/>
       <strong>主贴不负责回答为何搭配会F的问题，如果你的得分明显偏小（只有估计值的1/10），那么原因通常可能是：<br/>
