--- a/index.html
+++ b/index.html
@@ -320,12 +320,15 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160708<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160715:<br/>
+      Update 20160723:<br/>
       <ul>
-        <li>满天繁星总算结束了，钻也被坑完了</li>
-        <li>居然和某人吃了顿饭，谁说她优雅S的。。。</li>
-        <li>但是她不同意</li>
-        <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;——ip对玉人有意见，但是玉人不同意</li>
+        <li>上一次活动才结束了一个礼拜，我的钻还尸骨未寒啊，暖暖最近很缺钱吗？</li>
+        <li>选标准权重直接把衣服堆上区间上限，别穿袜子也别穿鞋子。如果想躺赢的就再多堆5000，然后随便对方挑剔。</li>
+        <li>第一关：65000~75000</li>
+        <li>第二关：75000~85000</li>
+        <li>第三关：60000~70000</li>
+        <li>第四关：70000~80000</li>
+        <li>第五关：55000~65000</li>
       </ul>
       <strong>Proof of our existence, and our memories  -- updated together by 玉人&ip on 15th July 2016</strong><span style="color:white">这是ip被打了一顿后发上去的</span><br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
