--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
       设计图数据来自amy_翡翠@贴吧<br/>
       Update 201608006:<br/>
       <ul>
-        <li>最近太忙，估计没有办法及时更新，急着过关的可以去看看傲娇的攻略</li>
+        <li>最近太忙，估计没有办法及时更新，急着过关的可以去看看<a href='http://ajglz.coding.me'>傲娇的攻略</a></li>
         <li>第二天的图要无伤过比较辛苦，建议使用无脑顺序：微笑->沉睡->飞吻->微笑->免挑。第一个技能吃对方的沉睡，微笑和飞吻打不到高分属性就重置。</li>
       </ul>
       <strong>Proof of our existence, and our memories  -- updated together by 玉人&ip on 15th July 2016</strong><span style="color:white">这是ip被打了一顿后发上去的</span><br/>
