--- a/index.html
+++ b/index.html
@@ -320,15 +320,12 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160708<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 201608006:<br/>
+      Update 20160809:<br/>
       <ul>
         <li>最近太忙，估计没有办法及时更新，急着过关的可以去看看<a href='http://ajglz.coding.me'>傲娇的攻略</a></li>
-        <li>和玉人就昨天的攻略解读产生了严重分歧，在互相问候了对方教语文的体育老师几轮之后，郑重把今天的攻略详细列出：</li>
-        <li>用极限搭配。</li>
-        <li>不可避免要吃一次技能，无脑技能顺序为：微笑-免挑-沉睡（必须顶级）-飞吻</li>
-        <li>战斗过程如下：第一回合吃对方的礼物，第二回合挡住对方的挑剔，第三回合的沉睡可以把对方睡到10.8秒以后，使得对方的第二个礼物在12秒以后生效，彻底失去作用</li>
-        <li>如果对方第一个技能不是礼物或者成熟保暖没有出现在第一第四顺位就重置</li>
-        <li>另外，期待全收集的玩家可以适当买一些次数了，万一明后两天的关卡开始坑了呢</li>
+        <li>最后一天，不可避免要吃一次技能，建议顺序为：微笑-免挑-沉睡-飞吻</li>
+        <li>第一轮吃礼物，第二轮挡挑剔，第三轮吃沉睡</li>
+        <li>或者第一轮吃沉睡，第二轮吃礼物，第三轮挡挑剔</li>
       </ul>
       <strong>Proof of our existence, and our memories  -- updated together by 玉人&ip on 15th July 2016</strong><span style="color:white">这是ip被打了一顿后发上去的</span><br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
