--- a/index.html
+++ b/index.html
@@ -320,12 +320,11 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160708<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160809:<br/>
+      Update 20160901:<br/>
       <ul>
-        <li>最近太忙，估计没有办法及时更新，急着过关的可以去看看<a href='http://ajglz.coding.me'>傲娇的攻略</a></li>
-        <li>最后一天，不可避免要吃一次技能，建议顺序为：微笑-免挑-沉睡-飞吻</li>
-        <li>第一轮吃礼物，第二轮挡挑剔，第三轮吃沉睡</li>
-        <li>或者第一轮吃沉睡，第二轮吃礼物，第三轮挡挑剔</li>
+        <li>更新了第15章的权重和技能</li>
+        <li>至于衣柜要稍等一阵</li>
+        <li>这一阵ip沉迷山口山，玉人又在梦100，两个人处于乐不思蜀的省电模式，所以各种更新都很慢，但是迟到总比不到好，对吧。</li>
       </ul>
       <strong>Proof of our existence, and our memories  -- updated together by 玉人&ip on 15th July 2016</strong><span style="color:white">这是ip被打了一顿后发上去的</span><br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
