--- a/index.html
+++ b/index.html
@@ -320,11 +320,12 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自amy_翡翠@贴吧 20160708<br/>
       设计图数据来自amy_翡翠@贴吧<br/>
-      Update 20160901:<br/>
+      Update 20160914:<br/>
       <ul>
-        <li>更新了第15章的权重和技能</li>
-        <li>至于衣柜要稍等一阵</li>
-        <li>这一阵ip沉迷山口山，玉人又在梦100，两个人处于乐不思蜀的省电模式，所以各种更新都很慢，但是迟到总比不到好，对吧。</li>
+        <li>今日活动攻略如下：</li>
+        <li>第一关第二关：选C（错了？错了再来一次呗）</li>
+        <li>第四关一键森女与麋鹿套装</li>
+        <li>其他参见玉人的微博。我觉得她回来做攻略不是一个很好的决定，毕竟太累，不过既然决定了也只能支持下去了。</li>
       </ul>
       <strong>Proof of our existence, and our memories  -- updated together by 玉人&ip on 15th July 2016</strong><span style="color:white">这是ip被打了一顿后发上去的</span><br/>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814" target="_blank">jillhx的新衣柜楼</a>汇报<br/>
